tests/basic/bad/test01.pepa
% File: tests/bad/test01.pepa
% Missing synchronisation (on a)
P = (a, r).P;
Q = (a, infty).Q;
(P <> Q)
